--- a/disney_clone/src/index.css
+++ b/disney_clone/src/index.css
@@ -1,5 +1,6 @@
 body {
   color: white; 
+  background-color: #040710;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
